[uk] new rules; dictionary update